added new block

--- a/Task 2/assets/styles.css
+++ b/Task 2/assets/styles.css
@@ -1,6 +1,18 @@
 body {
-    font-family: Roboto;
-    background-image: url(img/background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+  font-family: Roboto;
+  background-image: url(img/background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  background-color: white;
+  border-radius: 2%;
+  width: 500px;
+  height: 500px;
 }
