--- a/Task 2/assets/styles.css
+++ b/Task 2/assets/styles.css
@@ -31,7 +31,19 @@ body {
 
 img {
   height: 40px;
+  padding-left: 15px;
 }
+
+.payment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: gray;
+}
+
+/* h1 {
+  color: gray;
+} */
 
 h2 {
   font-size: 20px;
@@ -44,16 +56,19 @@ h2 {
   display: flex;
   justify-content: start;
   align-items: center;
-  gap: 20px;
+  gap: 40px;
   height: 70px;
   width: 500px;
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 
 button {
   width: 500px;
   height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   color: white;
   font-size: 25px;
@@ -61,4 +76,11 @@ button {
   border: 0;
   border-bottom-left-radius: 2%;
   border-bottom-right-radius: 2%;
+}
+
+.dots {
+  font-size: 20px;
+  display: flex;
+  gap: 5px;
+  opacity: 0.5;
 }
