--- a/Task 3/assets/styles.css
+++ b/Task 3/assets/styles.css
@@ -1,5 +1,17 @@
 body {
   font-family: Roboto;
   height: 100vh;
-  background-color: #5db08d;
+  margin: 0;
+  background-color: #16a085;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  height: 500px;
+  width: 700px;
+  background-color: #fff;
+  border-radius: 1%;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
