--- a/Task 2/assets/styles.css
+++ b/Task 2/assets/styles.css
@@ -94,6 +94,7 @@ button {
   color: white;
   font-size: 20px;
   background-color: #1e90ff;
+  text-decoration: none;
   border: 0;
   border-bottom-left-radius: 10px 10px;
   border-bottom-right-radius: 10px 10px;
