--- a/Task 3/assets/styles.css
+++ b/Task 3/assets/styles.css
@@ -9,9 +9,75 @@ body {
 }
 
 .main {
-  height: 500px;
-  width: 700px;
+  height: 700px;
+  width: 900px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
   background-color: #fff;
   border-radius: 1%;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.info {
+  width: 650px;
+  height: 400px;
+  margin-top: 30px;
+}
+
+.header h1 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header img {
+  width: 35px;
+}
+
+.header p {
+  font-size: 17px;
+  color: gray;
+}
+
+.price_info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.speed,
+.gloves,
+.total {
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+}
+
+.speed,
+.gloves,
+.total h2 {
+  color: #5c5c5c;
+}
+
+.total h2 {
+  font-weight: 500;
+  font-size: 35px;
+}
+
+.speed p {
+  font-size: 30px;
+  font-weight: 500;
+  color: black;
+}
+
+.gloves p {
+  font-size: 30px;
+  font-weight: 600;
+  color: black;
+}
+
+.total p {
+  font-size: 30px;
+  font-weight: 600;
+  color: black;
 }
