--- a/Task 3/assets/styles.css
+++ b/Task 3/assets/styles.css
@@ -17,6 +17,8 @@ body {
   background-color: #fff;
   border-radius: 1%;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  position: relative;
 }
 
 .info {
@@ -30,12 +32,23 @@ body {
   justify-content: space-between;
 }
 
-.header img {
+.profile_icon {
   width: 35px;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.profile_icon:hover {
+  cursor: pointer;
+  box-shadow: -1px 1px 10px 5px rgba(0, 0, 0, 0.3);
 }
 
 .header p {
-  font-size: 17px;
+  font-size: 20px;
   color: gray;
 }
 
@@ -43,6 +56,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: 50px;
 }
 
 .speed,
@@ -51,6 +65,7 @@ body {
   display: flex;
   justify-content: space-between;
   height: 60px;
+  align-items: center;
 }
 
 .speed,
@@ -80,4 +95,12 @@ body {
   font-size: 30px;
   font-weight: 600;
   color: black;
+}
+
+.bicycle {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  top: 270px;
+  width: 900px;
 }
