--- a/Task 4/assets/styles.css
+++ b/Task 4/assets/styles.css
@@ -17,19 +17,26 @@ body {
 .main__header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  height: 80px;
+  justify-content: space-around;
+  height: 90px;
   background-color: #6a96d8;
   color: white;
 }
 
 .main__circle {
-  width: 50px;
-  height: 50px;
+  width: 10px;
+  height: 10px;
   background-color: white;
   border-radius: 50%;
+  margin-right: -40px;
 }
 
 .main__header p {
-  margin: 0 0 0 15px;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.main__header img {
+  width: 35px;
+  margin-left: 160px;
 }
