--- a/Task 4/assets/styles.css
+++ b/Task 4/assets/styles.css
@@ -54,7 +54,7 @@ body {
   content: "";
   flex-basis: 55%;
   border-bottom: 1px solid #dcdcdc;
-  margin: 0 20px;
+  margin: 0 5px;
 }
 
 .first__message__time {
@@ -78,4 +78,31 @@ body {
   margin-left: 25px;
   padding: 10px;
   border-radius: 5px;
+}
+
+.second__message {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.second__message__time {
+  display: flex;
+  justify-content: end;
+  color: #aeb0b3;
+  font-weight: 500;
+  margin: 20px 25px 0 0;
+}
+
+.second__message__message {
+  display: flex;
+  align-items: center;
+  background-color: #f2f2f2;
+  font-weight: 600;
+  font-size: 18px;
+  width: 320px;
+  height: 60px;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 5px 25px 0 0;
 }
