--- a/Task 5/assets/styles.css
+++ b/Task 5/assets/styles.css
@@ -7,4 +7,42 @@ body {
   background-repeat: no-repeat;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.root {
+  height: 550px;
+  width: 500px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.root__countries {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 70px;
+}
+
+.line {
+  width: 40px;
+  height: 8px;
+  background-color: #d3e6f4;
+  margin-top: 45px;
+}
+
+.root__countries h2 {
+  font-size: 64px;
+  font-weight: bolder;
+  color: #3b8acf;
+  margin: 0;
+}
+
+.root__countries p {
+  margin: 0;
+  font-size: 18px;
+  color: #aaaaaa;
+  display: flex;
+  justify-content: space-around;
 }
