--- a/Task 5/assets/styles.css
+++ b/Task 5/assets/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .root {
-  height: 550px;
+  height: 600px;
   width: 500px;
   background-color: white;
   border-radius: 5px;
@@ -40,7 +40,6 @@ body {
 
 .root__countries h2 {
   font-size: 64px;
-  font-weight: bolder;
   color: #3b8acf;
   margin: 0;
 }
@@ -51,4 +50,22 @@ body {
   color: #aaaaaa;
   display: flex;
   gap: 150px;
+}
+
+.place {
+  display: flex;
+  justify-content: flex-start;
+  margin: 80px 0 0 52px;
+  gap: 90px;
+}
+
+.place h4 {
+  color: #aaaaaa;
+  margin: 0;
+}
+
+.place p {
+  margin: 0;
+  font-size: 21px;
+  font-weight: 500;
 }
