--- a/Task 6/assets/styles.css
+++ b/Task 6/assets/styles.css
@@ -1,7 +1,6 @@
 body {
   height: 100vh;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto;
   background-color: #4d515d;
   margin: 0;
   padding: 0;
@@ -12,7 +11,7 @@ body {
 
 .root {
   height: 700px;
-  width: 1100px;
+  width: 1200px;
   background-color: white;
   border-radius: 5px;
   box-shadow: 10px 10px 15px -5px rgba(0, 0, 0, 0.5);
@@ -106,12 +105,26 @@ p {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-left: 30px;
+  gap: 55px;
 }
 
 .footer h2 {
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .footer h3 {
   color: #8b8b8c;
+  font-size: 15px;
+}
+
+.image {
+  position: absolute;
+  top: 127px;
+  left: 1093px;
+}
+
+.image img {
+  height: 700px;
+  border-radius: 0 5px 5px 0;
 }
