--- a/Task 7/assets/styles.css
+++ b/Task 7/assets/styles.css
@@ -67,14 +67,49 @@ p,
 }
 
 .right__sector {
-  display: flex;
   width: 60%;
   height: 100%;
 }
 
 .content {
   display: flex;
+  flex-direction: column;
   font-size: 21px;
   padding: 40px 35px 0 35px;
   line-height: 1.6;
+}
+
+.line__two {
+  margin: 25px 0 0px 0;
+  width: 100%;
+  height: 3px;
+  background-color: #f6f6f7;
+  box-shadow: 0 0px 7px -1px gray;
+}
+
+.footer {
+  margin: 0;
+  width: 100%;
+  height: 95px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 215px;
+}
+
+.date {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.more {
+  display: flex;
+  align-items: center;
+  color: #b1b7be;
+  font-size: 18px;
+}
+
+.more p {
+  margin: 0 20px 0 7px;
 }
