--- a/Task 7/assets/styles.css
+++ b/Task 7/assets/styles.css
@@ -54,7 +54,7 @@ p,
 
 .account {
   display: flex;
-  padding: 50px 50px;
+  padding: 50px 0 50px 35px;
   align-items: center;
   font-size: 21px;
   color: #fffffd;
