--- a/Task 4/assets/styles.css
+++ b/Task 4/assets/styles.css
@@ -31,12 +31,12 @@ body {
   margin-right: -40px;
 }
 
-.main__header p {
+.contact__name {
   font-size: 24px;
   font-weight: 500;
 }
 
-.main__header img {
+.main__header__close__icon {
   width: 35px;
   margin-left: 160px;
 }
