--- a/Task 5/assets/styles.css
+++ b/Task 5/assets/styles.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   justify-content: space-evenly;
   margin-top: 70px;
+  text-transform: uppercase;
 }
 
 .root__countries__arrival {
@@ -57,6 +58,7 @@ body {
   justify-content: flex-start;
   margin: 70px 0 0 65px;
   gap: 100px;
+  text-transform: uppercase;
 }
 
 .general__information__header {
@@ -79,6 +81,7 @@ body {
 .passenger__info__header {
   margin: 0;
   color: #aaaaaa;
+  text-transform: uppercase;
 }
 
 .passenger__info__paragraph {
