--- a/Task 8/assets/styles.css
+++ b/Task 8/assets/styles.css
@@ -49,6 +49,8 @@ body {
 
 .right__sector {
   width: 65%;
+  display: flex;
+  flex-direction: column;
 }
 
 .countries {
@@ -66,11 +68,12 @@ body {
   font-size: 14px;
   text-transform: uppercase;
   color: #999999;
+  font-weight: 500;
 }
 
 .default:active,
-:focus,
-:hover {
+:hover,
+:focus {
   color: black;
   cursor: pointer;
 }
@@ -101,21 +104,20 @@ body {
   display: flex;
   justify-content: center;
   padding-right: 150px;
+  margin: 35px 0 35px 0;
 }
 
 .photos__block {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  width: 365px;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 30px;
+  margin-left: 25px;
 }
 
 .galery__block {
   position: relative;
-}
-
-.preview__galery {
-  width: 210px;
 }
 
 .play {
@@ -124,9 +126,14 @@ body {
   left: 90px;
 }
 
+.preview__galery {
+  width: 210px;
+  position: relative;
+}
+
 .all__photos {
   display: flex;
-  width: 210px;
+  justify-content: flex-start;
   gap: 10px;
 }
 
@@ -140,6 +147,22 @@ body {
 .description__block {
   display: flex;
   color: #4a494a;
+  margin: 0;
   font-family: Roboto;
-  font-size: 20px;
+  font-size: 18px;
+  width: 34%;
+  line-height: 1.7;
+  text-align: left;
+}
+
+.circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #fbf6f9;
+  /* background-color: black; */
+  opacity: 0.5;
+  position: absolute;
+  top: 48px;
+  left: 76px;
 }
