--- a/Task 9/assets/styles.css
+++ b/Task 9/assets/styles.css
@@ -55,8 +55,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 50px;
+  padding: 50px 0 0 0;
   gap: 35px;
+  margin: 0;
 }
 
 .wallets__item {
@@ -65,6 +66,7 @@ body {
   border-radius: 5px;
   height: 150px;
   width: 260px;
+  list-style: none;
 }
 
 .card__info {
