--- a/Task 9/assets/styles.css
+++ b/Task 9/assets/styles.css
@@ -21,6 +21,7 @@ body {
   width: 35%;
   height: 100%;
   background-color: #f2f2f2;
+  overflow: auto;
 }
 
 .left__sector__header__block {
@@ -55,7 +56,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0 0 0;
+  padding: 50px 0 25px 0px;
   gap: 35px;
   margin: 0;
 }
