--- a/Task 9/assets/rigthsector.css
+++ b/Task 9/assets/rigthsector.css
@@ -44,8 +44,10 @@
 .electronic__list {
   list-style: none;
   display: flex;
-  justify-content: center;
-  padding: 30px 0 0 0;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 40px 0 0 75px;
+  gap: 35px;
   margin: 0;
 }
 
@@ -56,6 +58,8 @@
   margin: 0;
   position: relative;
 }
+
+/* color: #8ace5e; */
 
 .circle {
   width: 30px;
@@ -68,6 +72,7 @@
 
 .item__list__overview__block {
   padding: 0 100px 0 35px;
+  width: 275px;
   display: flex;
   flex-direction: column;
   gap: 5px;
