--- a/Task 9/assets/scrollbar.css
+++ b/Task 9/assets/scrollbar.css
@@ -1,12 +1,12 @@
-.left__sector::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 7px;
 }
 
-.left__sector::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: #f2f2f2;
 }
 
-.left__sector::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: #6f6f6f;
   border-radius: 10px;
 }
