--- a/Task 9/assets/leftsector.css
+++ b/Task 9/assets/leftsector.css
@@ -71,7 +71,8 @@ body {
   list-style: none;
 }
 
-.wallets__item:hover {
+.wallets__item:hover,
+.wallets__item-active {
   cursor: pointer;
   border: 2px solid #8793c6;
 }
