--- a/Task 10/assets/css/main.css
+++ b/Task 10/assets/css/main.css
@@ -1,7 +1,12 @@
 @import url(firstPage.css);
+html {
+  display: flex;
+  justify-content: center;
+}
 
 body {
   font-family: Roboto;
   margin: 0;
   padding: 0;
+  width: 1440px;
 }
