--- a/Task 10/assets/css/main.css
+++ b/Task 10/assets/css/main.css
@@ -1,14 +1,18 @@
 @import url(firstPage.css);
-html {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-}
+@import url(secondPage.css);
 
 body {
   font-family: Roboto;
   margin: 0;
   padding: 0;
-  width: 1250px;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  overflow-x: hidden;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
