--- a/Task 10/assets/css/secondPage.css
+++ b/Task 10/assets/css/secondPage.css
@@ -2,3 +2,27 @@
   height: 100vh;
   width: 1250px;
 }
+
+.second__page__info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 30px;
+}
+
+.second__page__info__block__header {
+  text-transform: uppercase;
+  color: #333333;
+  font-size: 20px;
+}
+
+.second__page__info__block {
+  width: 312px;
+  line-height: 2;
+  text-align: left;
+}
+
+.second__page__info__block__text {
+  font-size: 16px;
+  color: #486a85;
+}
