--- a/Task 11/assets/styles.css
+++ b/Task 11/assets/styles.css
@@ -28,12 +28,18 @@ body {
   color: #fff;
   margin: 0;
   padding: 0;
+  cursor: pointer;
 }
 
 .default {
   color: #ecb9b8;
   margin: 0;
   padding: 0;
+}
+
+.default:hover {
+  color: #f1c8c7;
+  cursor: pointer;
 }
 
 .overview {
@@ -119,4 +125,9 @@ body {
   height: 50px;
   border-radius: 4px;
   top: 300px;
+}
+
+.button__block:hover {
+  transform: translateY(-4px);
+  transition: transform 0.3s ease;
 }
