--- a/Task 12/assets/styles.css
+++ b/Task 12/assets/styles.css
@@ -19,6 +19,7 @@ body {
   height: 750px;
   width: 600px;
   background: #fdec51;
+  position: relative;
 }
 
 .header {
@@ -31,9 +32,34 @@ body {
 
 .header__header {
   font-weight: 400;
+  position: relative;
 }
 
 .close__image {
   width: 25px;
   height: 25px;
+}
+
+.user__info {
+  width: 600px;
+  height: 500px;
+  background: #fff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  left: 85px;
+  margin-top: 50px;
+}
+
+.profile__image {
+  position: relative;
+}
+
+.avatar {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+  top: -40px;
+  left: 50px;
 }
