--- a/Task 13/assets/styles.css
+++ b/Task 13/assets/styles.css
@@ -42,6 +42,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+.image__block::before {
+  content: "";
+  position: absolute;
+  background-color: #fff;
+  width: 2px;
+  height: 40px;
+  bottom: 24px;
 }
 
 .header__image {
