--- a/Task 13/assets/styles.css
+++ b/Task 13/assets/styles.css
@@ -21,7 +21,8 @@ body {
   box-shadow: 0px 0px 50px 1px rgba(0, 0, 0, 0.3);
   background: linear-gradient(to right bottom, #ba7ed9, #9077ce);
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .main__block__header {
@@ -64,4 +65,9 @@ body {
   color: #fff;
   font-weight: 500;
   padding-right: 100px;
+}
+
+.timeline__list {
+  margin: 0;
+  list-style-type: none;
 }
