--- a/Task 13/assets/styles.css
+++ b/Task 13/assets/styles.css
@@ -69,5 +69,21 @@ body {
 
 .timeline__list {
   margin: 0;
-  list-style-type: none;
+  height: 140px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 0 10px;
+  width: 220px;
+}
+
+.timeline__list__item {
+  margin: 0;
+  color: #fff;
+  font-weight: 500;
+  padding: 0 15px 0 10px;
+  margin-left: 25px;
+}
+
+.timeline__list__item::marker {
+  font-size: 23px;
 }
